<?xml version="1.0"?>
<package>
  <name>mypkg</name>
  <version>0.0.1</version>
  <description>The mypkg package</description>


  <maintainer email="s1426004py@s.chibakoudai.jp">Igarashi Tomoya</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
